// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignment 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "Initialize Functionless Context": Object {
      "Next": "a = \\"2\\"",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "a = \\"2\\"": Object {
      "Next": "b = a",
      "Result": "2",
      "ResultPath": "$.a",
      "Type": "Pass",
    },
    "a = 1": Object {
      "Next": "d = a",
      "Result": 1,
      "ResultPath": "$.a",
      "Type": "Pass",
    },
    "a = [1, 2]": Object {
      "Next": "e = a",
      "Result": Array [
        1,
        2,
      ],
      "ResultPath": "$.a",
      "Type": "Pass",
    },
    "a = null": Object {
      "InputPath": "$.fnl_context.null",
      "Next": "c = a",
      "ResultPath": "$.a",
      "Type": "Pass",
    },
    "a = {x: \\"val\\"}": Object {
      "Next": "return {a: a, b: b, c: c, d: d, e: e}",
      "Result": Object {
        "x": "val",
      },
      "ResultPath": "$.a",
      "Type": "Pass",
    },
    "b = a": Object {
      "InputPath": "$.a",
      "Next": "a = null",
      "ResultPath": "$.b",
      "Type": "Pass",
    },
    "c = a": Object {
      "InputPath": "$.a",
      "Next": "a = 1",
      "ResultPath": "$.c",
      "Type": "Pass",
    },
    "d = a": Object {
      "InputPath": "$.a",
      "Next": "a = [1, 2]",
      "ResultPath": "$.d",
      "Type": "Pass",
    },
    "e = a": Object {
      "InputPath": "$.a",
      "Next": "a = {x: \\"val\\"}",
      "ResultPath": "$.e",
      "Type": "Pass",
    },
    "return {a: a, b: b, c: c, d: d, e: e}": Object {
      "End": true,
      "Parameters": Object {
        "a.$": "$.a",
        "b.$": "$.b",
        "c.$": "$.c",
        "d.$": "$.d",
        "e.$": "$.e",
      },
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`binaryOps logic 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "1__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null": Object {
      "End": true,
      "Parameters": Object {
        "and.$": "$.heap1",
        "andVar.$": "$.c",
        "invNullCoal.$": "$.heap4",
        "nullCoal.$": "$.heap3",
        "nullNull.$": "$.heap5",
        "nullVal.$": "$.heap6",
        "or.$": "$.heap2",
      },
      "ResultPath": "$",
      "Type": "Pass",
    },
    "1__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null 1": Object {
      "Choices": Array [
        Object {
          "Next": "assignTrue__1__return {andVar: c, and: input.a && input.b, or: input.a || i",
          "Or": Array [
            Object {
              "And": Array [
                Object {
                  "IsPresent": true,
                  "Variable": "$.fnl_context.input.a",
                },
                Object {
                  "IsNull": false,
                  "Variable": "$.fnl_context.input.a",
                },
                Object {
                  "Or": Array [
                    Object {
                      "And": Array [
                        Object {
                          "IsString": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsString": true,
                                "Variable": "$.fnl_context.input.a",
                              },
                              Object {
                                "StringEquals": "",
                                "Variable": "$.fnl_context.input.a",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsNumeric": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsNumeric": true,
                                "Variable": "$.fnl_context.input.a",
                              },
                              Object {
                                "NumericEquals": 0,
                                "Variable": "$.fnl_context.input.a",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsBoolean": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "BooleanEquals": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "And": Array [
                Object {
                  "IsPresent": true,
                  "Variable": "$.fnl_context.input.b",
                },
                Object {
                  "IsNull": false,
                  "Variable": "$.fnl_context.input.b",
                },
                Object {
                  "Or": Array [
                    Object {
                      "And": Array [
                        Object {
                          "IsString": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsString": true,
                                "Variable": "$.fnl_context.input.b",
                              },
                              Object {
                                "StringEquals": "",
                                "Variable": "$.fnl_context.input.b",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsNumeric": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsNumeric": true,
                                "Variable": "$.fnl_context.input.b",
                              },
                              Object {
                                "NumericEquals": 0,
                                "Variable": "$.fnl_context.input.b",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsBoolean": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "BooleanEquals": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
      "Default": "assignFalse__1__return {andVar: c, and: input.a && input.b, or: input.a || ",
      "Type": "Choice",
    },
    "2__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null": Object {
      "Choices": Array [
        Object {
          "And": Array [
            Object {
              "IsPresent": true,
              "Variable": "$.fnl_context.input.v",
            },
            Object {
              "IsNull": false,
              "Variable": "$.fnl_context.input.v",
            },
          ],
          "Next": "takeLeft__2__return {andVar: c, and: input.a && input.b, or: input.a || inp",
        },
      ],
      "Default": "takeRight__2__return {andVar: c, and: input.a && input.b, or: input.a || in",
      "Type": "Choice",
    },
    "3__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null": Object {
      "Choices": Array [
        Object {
          "And": Array [
            Object {
              "IsPresent": true,
              "Variable": "$.fnl_context.input.nv",
            },
            Object {
              "IsNull": false,
              "Variable": "$.fnl_context.input.nv",
            },
          ],
          "Next": "takeLeft__3__return {andVar: c, and: input.a && input.b, or: input.a || inp",
        },
      ],
      "Default": "takeRight__3__return {andVar: c, and: input.a && input.b, or: input.a || in",
      "Type": "Choice",
    },
    "4__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null": Object {
      "Choices": Array [
        Object {
          "And": Array [
            Object {
              "IsPresent": true,
              "Variable": "$.fnl_context.input.nv",
            },
            Object {
              "IsNull": false,
              "Variable": "$.fnl_context.input.nv",
            },
          ],
          "Next": "takeLeft__4__return {andVar: c, and: input.a && input.b, or: input.a || inp",
        },
      ],
      "Default": "takeRight__4__return {andVar: c, and: input.a && input.b, or: input.a || in",
      "Type": "Choice",
    },
    "5__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null": Object {
      "Choices": Array [
        Object {
          "And": Array [
            Object {
              "IsPresent": true,
              "Variable": "$.fnl_context.null",
            },
            Object {
              "IsNull": false,
              "Variable": "$.fnl_context.null",
            },
          ],
          "Next": "takeLeft__5__return {andVar: c, and: input.a && input.b, or: input.a || inp",
        },
      ],
      "Default": "takeRight__5__return {andVar: c, and: input.a && input.b, or: input.a || in",
      "Type": "Choice",
    },
    "Initialize Functionless Context": Object {
      "Next": "c = input.a && input.b",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "assignFalse__1__return {andVar: c, and: input.a && input.b, or: input.a || ": Object {
      "Next": "2__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "Result": false,
      "ResultPath": "$.heap2",
      "Type": "Pass",
    },
    "assignFalse__c = input.a && input.b": Object {
      "Next": "assign__c = input.a && input.b",
      "Result": false,
      "ResultPath": "$.heap0",
      "Type": "Pass",
    },
    "assignFalse__return {andVar: c, and: input.a && input.b, or: input.a || inp": Object {
      "Next": "1__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null 1",
      "Result": false,
      "ResultPath": "$.heap1",
      "Type": "Pass",
    },
    "assignTrue__1__return {andVar: c, and: input.a && input.b, or: input.a || i": Object {
      "Next": "2__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "Result": true,
      "ResultPath": "$.heap2",
      "Type": "Pass",
    },
    "assignTrue__c = input.a && input.b": Object {
      "Next": "assign__c = input.a && input.b",
      "Result": true,
      "ResultPath": "$.heap0",
      "Type": "Pass",
    },
    "assignTrue__return {andVar: c, and: input.a && input.b, or: input.a || inpu": Object {
      "Next": "1__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null 1",
      "Result": true,
      "ResultPath": "$.heap1",
      "Type": "Pass",
    },
    "assign__c = input.a && input.b": Object {
      "InputPath": "$.heap0",
      "Next": "return {andVar: c, and: input.a && input.b, or: input.a || input.b, nullCoa",
      "ResultPath": "$.c",
      "Type": "Pass",
    },
    "c = input.a && input.b": Object {
      "Choices": Array [
        Object {
          "And": Array [
            Object {
              "And": Array [
                Object {
                  "IsPresent": true,
                  "Variable": "$.fnl_context.input.a",
                },
                Object {
                  "IsNull": false,
                  "Variable": "$.fnl_context.input.a",
                },
                Object {
                  "Or": Array [
                    Object {
                      "And": Array [
                        Object {
                          "IsString": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsString": true,
                                "Variable": "$.fnl_context.input.a",
                              },
                              Object {
                                "StringEquals": "",
                                "Variable": "$.fnl_context.input.a",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsNumeric": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsNumeric": true,
                                "Variable": "$.fnl_context.input.a",
                              },
                              Object {
                                "NumericEquals": 0,
                                "Variable": "$.fnl_context.input.a",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsBoolean": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "BooleanEquals": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "And": Array [
                Object {
                  "IsPresent": true,
                  "Variable": "$.fnl_context.input.b",
                },
                Object {
                  "IsNull": false,
                  "Variable": "$.fnl_context.input.b",
                },
                Object {
                  "Or": Array [
                    Object {
                      "And": Array [
                        Object {
                          "IsString": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsString": true,
                                "Variable": "$.fnl_context.input.b",
                              },
                              Object {
                                "StringEquals": "",
                                "Variable": "$.fnl_context.input.b",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsNumeric": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsNumeric": true,
                                "Variable": "$.fnl_context.input.b",
                              },
                              Object {
                                "NumericEquals": 0,
                                "Variable": "$.fnl_context.input.b",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsBoolean": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "BooleanEquals": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
          "Next": "assignTrue__c = input.a && input.b",
        },
      ],
      "Default": "assignFalse__c = input.a && input.b",
      "Type": "Choice",
    },
    "return {andVar: c, and: input.a && input.b, or: input.a || input.b, nullCoa": Object {
      "Choices": Array [
        Object {
          "And": Array [
            Object {
              "And": Array [
                Object {
                  "IsPresent": true,
                  "Variable": "$.fnl_context.input.a",
                },
                Object {
                  "IsNull": false,
                  "Variable": "$.fnl_context.input.a",
                },
                Object {
                  "Or": Array [
                    Object {
                      "And": Array [
                        Object {
                          "IsString": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsString": true,
                                "Variable": "$.fnl_context.input.a",
                              },
                              Object {
                                "StringEquals": "",
                                "Variable": "$.fnl_context.input.a",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsNumeric": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsNumeric": true,
                                "Variable": "$.fnl_context.input.a",
                              },
                              Object {
                                "NumericEquals": 0,
                                "Variable": "$.fnl_context.input.a",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsBoolean": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                        Object {
                          "BooleanEquals": true,
                          "Variable": "$.fnl_context.input.a",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "And": Array [
                Object {
                  "IsPresent": true,
                  "Variable": "$.fnl_context.input.b",
                },
                Object {
                  "IsNull": false,
                  "Variable": "$.fnl_context.input.b",
                },
                Object {
                  "Or": Array [
                    Object {
                      "And": Array [
                        Object {
                          "IsString": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsString": true,
                                "Variable": "$.fnl_context.input.b",
                              },
                              Object {
                                "StringEquals": "",
                                "Variable": "$.fnl_context.input.b",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsNumeric": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsNumeric": true,
                                "Variable": "$.fnl_context.input.b",
                              },
                              Object {
                                "NumericEquals": 0,
                                "Variable": "$.fnl_context.input.b",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsBoolean": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                        Object {
                          "BooleanEquals": true,
                          "Variable": "$.fnl_context.input.b",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
          "Next": "assignTrue__return {andVar: c, and: input.a && input.b, or: input.a || inpu",
        },
      ],
      "Default": "assignFalse__return {andVar: c, and: input.a && input.b, or: input.a || inp",
      "Type": "Choice",
    },
    "takeLeft__2__return {andVar: c, and: input.a && input.b, or: input.a || inp": Object {
      "InputPath": "$.fnl_context.input.v",
      "Next": "3__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "ResultPath": "$.heap3",
      "Type": "Pass",
    },
    "takeLeft__3__return {andVar: c, and: input.a && input.b, or: input.a || inp": Object {
      "InputPath": "$.fnl_context.input.nv",
      "Next": "4__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "ResultPath": "$.heap4",
      "Type": "Pass",
    },
    "takeLeft__4__return {andVar: c, and: input.a && input.b, or: input.a || inp": Object {
      "InputPath": "$.fnl_context.input.nv",
      "Next": "5__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "ResultPath": "$.heap5",
      "Type": "Pass",
    },
    "takeLeft__5__return {andVar: c, and: input.a && input.b, or: input.a || inp": Object {
      "InputPath": "$.fnl_context.null",
      "Next": "1__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "ResultPath": "$.heap6",
      "Type": "Pass",
    },
    "takeRight__2__return {andVar: c, and: input.a && input.b, or: input.a || in": Object {
      "InputPath": "$.fnl_context.input.nv",
      "Next": "3__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "ResultPath": "$.heap3",
      "Type": "Pass",
    },
    "takeRight__3__return {andVar: c, and: input.a && input.b, or: input.a || in": Object {
      "InputPath": "$.fnl_context.input.v",
      "Next": "4__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "ResultPath": "$.heap4",
      "Type": "Pass",
    },
    "takeRight__4__return {andVar: c, and: input.a && input.b, or: input.a || in": Object {
      "InputPath": "$.fnl_context.null",
      "Next": "5__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "ResultPath": "$.heap5",
      "Type": "Pass",
    },
    "takeRight__5__return {andVar: c, and: input.a && input.b, or: input.a || in": Object {
      "InputPath": "$.fnl_context.input.v",
      "Next": "1__return {andVar: c, and: input.a && input.b, or: input.a || input.b, null",
      "ResultPath": "$.heap6",
      "Type": "Pass",
    },
  },
}
`;

exports[`binaryOps logic with calls 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "0_tmp = await func()": Object {
      "InputPath": "$.fnl_context.null",
      "Next": "assign__0_tmp = await func()",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
    "1__return {and: true && 0_tmp, or: false || 1_tmp}": Object {
      "End": true,
      "Parameters": Object {
        "and.$": "$.heap2",
        "or.$": "$.heap3",
      },
      "ResultPath": "$",
      "Type": "Pass",
    },
    "1__return {and: true && 0_tmp, or: false || 1_tmp} 1": Object {
      "Choices": Array [
        Object {
          "Next": "assignTrue__1__return {and: true && 0_tmp, or: false || 1_tmp} 1",
          "Or": Array [
            Object {
              "IsPresent": true,
              "Variable": "$.0_false",
            },
            Object {
              "And": Array [
                Object {
                  "IsPresent": true,
                  "Variable": "$.1_tmp",
                },
                Object {
                  "IsNull": false,
                  "Variable": "$.1_tmp",
                },
                Object {
                  "Or": Array [
                    Object {
                      "And": Array [
                        Object {
                          "IsString": true,
                          "Variable": "$.1_tmp",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsString": true,
                                "Variable": "$.1_tmp",
                              },
                              Object {
                                "StringEquals": "",
                                "Variable": "$.1_tmp",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsNumeric": true,
                          "Variable": "$.1_tmp",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsNumeric": true,
                                "Variable": "$.1_tmp",
                              },
                              Object {
                                "NumericEquals": 0,
                                "Variable": "$.1_tmp",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsBoolean": true,
                          "Variable": "$.1_tmp",
                        },
                        Object {
                          "BooleanEquals": true,
                          "Variable": "$.1_tmp",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
      "Default": "assignFalse__1__return {and: true && 0_tmp, or: false || 1_tmp} 1",
      "Type": "Choice",
    },
    "1_tmp = await func()": Object {
      "InputPath": "$.fnl_context.null",
      "Next": "assign__1_tmp = await func()",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap1",
      "Type": "Task",
    },
    "Initialize Functionless Context": Object {
      "Next": "0_tmp = await func()",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "assignFalse__1__return {and: true && 0_tmp, or: false || 1_tmp} 1": Object {
      "Next": "1__return {and: true && 0_tmp, or: false || 1_tmp}",
      "Result": false,
      "ResultPath": "$.heap3",
      "Type": "Pass",
    },
    "assignFalse__return {and: true && 0_tmp, or: false || 1_tmp}": Object {
      "Next": "1__return {and: true && 0_tmp, or: false || 1_tmp} 1",
      "Result": false,
      "ResultPath": "$.heap2",
      "Type": "Pass",
    },
    "assignTrue__1__return {and: true && 0_tmp, or: false || 1_tmp} 1": Object {
      "Next": "1__return {and: true && 0_tmp, or: false || 1_tmp}",
      "Result": true,
      "ResultPath": "$.heap3",
      "Type": "Pass",
    },
    "assignTrue__return {and: true && 0_tmp, or: false || 1_tmp}": Object {
      "Next": "1__return {and: true && 0_tmp, or: false || 1_tmp} 1",
      "Result": true,
      "ResultPath": "$.heap2",
      "Type": "Pass",
    },
    "assign__0_tmp = await func()": Object {
      "InputPath": "$.heap0",
      "Next": "1_tmp = await func()",
      "ResultPath": "$.0_tmp",
      "Type": "Pass",
    },
    "assign__1_tmp = await func()": Object {
      "InputPath": "$.heap1",
      "Next": "return {and: true && 0_tmp, or: false || 1_tmp}",
      "ResultPath": "$.1_tmp",
      "Type": "Pass",
    },
    "return {and: true && 0_tmp, or: false || 1_tmp}": Object {
      "Choices": Array [
        Object {
          "And": Array [
            Object {
              "IsPresent": false,
              "Variable": "$.0_true",
            },
            Object {
              "And": Array [
                Object {
                  "IsPresent": true,
                  "Variable": "$.0_tmp",
                },
                Object {
                  "IsNull": false,
                  "Variable": "$.0_tmp",
                },
                Object {
                  "Or": Array [
                    Object {
                      "And": Array [
                        Object {
                          "IsString": true,
                          "Variable": "$.0_tmp",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsString": true,
                                "Variable": "$.0_tmp",
                              },
                              Object {
                                "StringEquals": "",
                                "Variable": "$.0_tmp",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsNumeric": true,
                          "Variable": "$.0_tmp",
                        },
                        Object {
                          "Not": Object {
                            "And": Array [
                              Object {
                                "IsNumeric": true,
                                "Variable": "$.0_tmp",
                              },
                              Object {
                                "NumericEquals": 0,
                                "Variable": "$.0_tmp",
                              },
                            ],
                          },
                        },
                      ],
                    },
                    Object {
                      "And": Array [
                        Object {
                          "IsBoolean": true,
                          "Variable": "$.0_tmp",
                        },
                        Object {
                          "BooleanEquals": true,
                          "Variable": "$.0_tmp",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
          "Next": "assignTrue__return {and: true && 0_tmp, or: false || 1_tmp}",
        },
      ],
      "Default": "assignFalse__return {and: true && 0_tmp, or: false || 1_tmp}",
      "Type": "Choice",
    },
  },
}
`;

exports[`call lambda $AWS invoke 1`] = `
Object {
  "StartAt": "obj = {str: \\"hello world\\"}",
  "States": Object {
    "0_tmp = await $AWS.Lambda.Invoke({Function: func, Payload: obj})": Object {
      "Next": "assign__0_tmp = await $AWS.Lambda.Invoke({Function: func, Payload: obj})",
      "Parameters": Object {
        "FunctionName": "__REPLACED_TOKEN",
        "Payload.$": "$.obj",
      },
      "Resource": "__REPLACED_ARN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
    "assign__0_tmp = await $AWS.Lambda.Invoke({Function: func, Payload: obj})": Object {
      "InputPath": "$.heap0",
      "Next": "return 0_tmp.Payload.str",
      "ResultPath": "$.0_tmp",
      "Type": "Pass",
    },
    "obj = {str: \\"hello world\\"}": Object {
      "Next": "0_tmp = await $AWS.Lambda.Invoke({Function: func, Payload: obj})",
      "Result": Object {
        "str": "hello world",
      },
      "ResultPath": "$.obj",
      "Type": "Pass",
    },
    "return 0_tmp.Payload.str": Object {
      "End": true,
      "InputPath": "$.0_tmp.Payload.str",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda $SFN forEach 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "Initialize Functionless Context": Object {
      "Next": "await $SFN.forEach(input.arr, function(n))",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "await $SFN.forEach(input.arr, function(n))": Object {
      "ItemsPath": "$.fnl_context.input.arr",
      "Iterator": Object {
        "StartAt": "return func(n)",
        "States": Object {
          "1__return func(n)": Object {
            "End": true,
            "InputPath": "$.heap0",
            "ResultPath": "$",
            "Type": "Pass",
          },
          "return func(n)": Object {
            "InputPath": "$.n",
            "Next": "1__return func(n)",
            "Resource": "__REPLACED_TOKEN",
            "ResultPath": "$.heap0",
            "Type": "Task",
          },
        },
      },
      "Next": "return null",
      "Parameters": Object {
        "n.$": "$$.Map.Item.Value",
      },
      "ResultPath": "$.heap1",
      "Type": "Map",
    },
    "return null": Object {
      "End": true,
      "InputPath": "$.fnl_context.null",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda $SFN map 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "1__return $SFN.map(input.arr, function(n))": Object {
      "End": true,
      "InputPath": "$.heap0",
      "ResultPath": "$",
      "Type": "Pass",
    },
    "Initialize Functionless Context": Object {
      "Next": "return $SFN.map(input.arr, function(n))",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "return $SFN.map(input.arr, function(n))": Object {
      "ItemsPath": "$.fnl_context.input.arr",
      "Iterator": Object {
        "StartAt": "return n",
        "States": Object {
          "return n": Object {
            "End": true,
            "InputPath": "$.n",
            "ResultPath": "$",
            "Type": "Pass",
          },
        },
      },
      "Next": "1__return $SFN.map(input.arr, function(n))",
      "Parameters": Object {
        "n.$": "$$.Map.Item.Value",
      },
      "ResultPath": "$.heap0",
      "Type": "Map",
    },
  },
}
`;

exports[`call lambda $SFN parallel 1`] = `
Object {
  "StartAt": "return $SFN.parallel([function(), function()])",
  "States": Object {
    "1__return $SFN.parallel([function(), function()])": Object {
      "End": true,
      "InputPath": "$.heap0",
      "ResultPath": "$",
      "Type": "Pass",
    },
    "return $SFN.parallel([function(), function()])": Object {
      "Branches": Array [
        Object {
          "StartAt": "return 1",
          "States": Object {
            "return 1": Object {
              "End": true,
              "Result": 1,
              "ResultPath": "$",
              "Type": "Pass",
            },
          },
        },
        Object {
          "StartAt": "return 2",
          "States": Object {
            "return 2": Object {
              "End": true,
              "Result": 2,
              "ResultPath": "$",
              "Type": "Pass",
            },
          },
        },
      ],
      "Next": "1__return $SFN.parallel([function(), function()])",
      "ResultPath": "$.heap0",
      "Type": "Parallel",
    },
  },
}
`;

exports[`call lambda $SFN wait 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "$SFN.waitFor(1)": Object {
      "Next": "return null",
      "Seconds": 1,
      "Type": "Wait",
    },
    "Initialize Functionless Context": Object {
      "Next": "$SFN.waitFor(1)",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "return null": Object {
      "End": true,
      "InputPath": "$.fnl_context.null",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "1__return func()": Object {
      "End": true,
      "InputPath": "$.heap0",
      "ResultPath": "$",
      "Type": "Pass",
    },
    "Initialize Functionless Context": Object {
      "Next": "return func()",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "return func()": Object {
      "InputPath": "$.fnl_context.null",
      "Next": "1__return func()",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
  },
}
`;

exports[`call lambda with array parameter 1`] = `
Object {
  "StartAt": "return func([1, 2])",
  "States": Object {
    "1__return func([1, 2])": Object {
      "End": true,
      "InputPath": "$.heap0",
      "ResultPath": "$",
      "Type": "Pass",
    },
    "return func([1, 2])": Object {
      "Next": "1__return func([1, 2])",
      "Parameters": Array [
        1,
        2,
      ],
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
  },
}
`;

exports[`call lambda with array ref 1`] = `
Object {
  "StartAt": "arr = [1, 2, 3]",
  "States": Object {
    "1__return func(arr)": Object {
      "End": true,
      "InputPath": "$.heap0",
      "ResultPath": "$",
      "Type": "Pass",
    },
    "arr = [1, 2, 3]": Object {
      "Next": "return func(arr)",
      "Result": Array [
        1,
        2,
        3,
      ],
      "ResultPath": "$.arr",
      "Type": "Pass",
    },
    "return func(arr)": Object {
      "InputPath": "$.arr",
      "Next": "1__return func(arr)",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
  },
}
`;

exports[`call lambda with object literal parameter 1`] = `
Object {
  "StartAt": "0_tmp = await func({str: \\"hello world\\"})",
  "States": Object {
    "0_tmp = await func({str: \\"hello world\\"})": Object {
      "Next": "assign__0_tmp = await func({str: \\"hello world\\"})",
      "Parameters": Object {
        "str": "hello world",
      },
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
    "assign__0_tmp = await func({str: \\"hello world\\"})": Object {
      "InputPath": "$.heap0",
      "Next": "return 0_tmp.str",
      "ResultPath": "$.0_tmp",
      "Type": "Pass",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "InputPath": "$.0_tmp.str",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with object reference parameter 1`] = `
Object {
  "StartAt": "obj = {str: \\"hello world\\"}",
  "States": Object {
    "0_tmp = await func(obj)": Object {
      "InputPath": "$.obj",
      "Next": "assign__0_tmp = await func(obj)",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
    "assign__0_tmp = await func(obj)": Object {
      "InputPath": "$.heap0",
      "Next": "return 0_tmp.str",
      "ResultPath": "$.0_tmp",
      "Type": "Pass",
    },
    "obj = {str: \\"hello world\\"}": Object {
      "Next": "0_tmp = await func(obj)",
      "Result": Object {
        "str": "hello world",
      },
      "ResultPath": "$.obj",
      "Type": "Pass",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "InputPath": "$.0_tmp.str",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with string parameter 1`] = `
Object {
  "StartAt": "0_tmp = await func(\\"hello world\\")",
  "States": Object {
    "0_tmp = await func(\\"hello world\\")": Object {
      "Next": "assign__0_tmp = await func(\\"hello world\\")",
      "Parameters": "hello world",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
    "assign__0_tmp = await func(\\"hello world\\")": Object {
      "InputPath": "$.heap0",
      "Next": "return 0_tmp.str",
      "ResultPath": "$.0_tmp",
      "Type": "Pass",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "InputPath": "$.0_tmp.str",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with string reference 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "0_tmp = await func(event.str)": Object {
      "InputPath": "$.fnl_context.input.str",
      "Next": "assign__0_tmp = await func(event.str)",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap0",
      "Type": "Task",
    },
    "Initialize Functionless Context": Object {
      "Next": "0_tmp = await func(event.str)",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "assign__0_tmp = await func(event.str)": Object {
      "InputPath": "$.heap0",
      "Next": "return 0_tmp.str",
      "ResultPath": "$.0_tmp",
      "Type": "Pass",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "InputPath": "$.0_tmp.str",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`overlapping variable with input 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "Initialize Functionless Context": Object {
      "Next": "a = \\"2\\"",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "a = \\"2\\"": Object {
      "Next": "return {a: input.a, b: a}",
      "Result": "2",
      "ResultPath": "$.a",
      "Type": "Pass",
    },
    "return {a: input.a, b: a}": Object {
      "End": true,
      "Parameters": Object {
        "a.$": "$.fnl_context.input.a",
        "b.$": "$.a",
      },
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`simple 1`] = `
Object {
  "StartAt": "return \\"hello world\\"",
  "States": Object {
    "return \\"hello world\\"": Object {
      "End": true,
      "Result": "hello world",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`templates 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "1__return \`the result: result.str\`": Object {
      "End": true,
      "InputPath": "$.heap4.string",
      "ResultPath": "$",
      "Type": "Pass",
    },
    "Initialize Functionless Context": Object {
      "Next": "partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "assign__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`": Object {
      "InputPath": "$.heap1.string",
      "Next": "result = await func(\`input.obj.str hello partOfTheTemplateString input.obj.",
      "ResultPath": "$.partOfTheTemplateString",
      "Type": "Pass",
    },
    "assign__result = await func(\`input.obj.str hello partOfTheTemplateString in": Object {
      "InputPath": "$.heap2",
      "Next": "return \`the result: result.str\`",
      "ResultPath": "$.result",
      "Type": "Pass",
    },
    "partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`": Object {
      "Choices": Array [
        Object {
          "And": Array [
            Object {
              "IsPresent": true,
              "Variable": "$.fnl_context.input.obj.str2",
            },
            Object {
              "IsNull": false,
              "Variable": "$.fnl_context.input.obj.str2",
            },
          ],
          "Next": "takeLeft__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`",
        },
      ],
      "Default": "takeRight__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`",
      "Type": "Choice",
    },
    "result = await func(\`input.obj.str hello partOfTheTemplateString input.obj.": Object {
      "Next": "string__result = await func(\`input.obj.str hello partOfTheTemplateString in",
      "Result": "{} hello {} {}",
      "ResultPath": "$.heap3",
      "Type": "Pass",
    },
    "return \`the result: result.str\`": Object {
      "Next": "string__return \`the result: result.str\`",
      "Result": "the result: {}",
      "ResultPath": "$.heap4",
      "Type": "Pass",
    },
    "string__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`": Object {
      "Next": "assign__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`",
      "Parameters": Object {
        "string.$": "States.Format($.heap1,$.heap0)",
      },
      "ResultPath": "$.heap1",
      "Type": "Pass",
    },
    "string__result = await func(\`input.obj.str hello partOfTheTemplateString in": Object {
      "Next": "task__result = await func(\`input.obj.str hello partOfTheTemplateString inpu",
      "Parameters": Object {
        "string.$": "States.Format($.heap3,$.fnl_context.input.obj.str,$.partOfTheTemplateString,$.fnl_context.input.obj.items[0])",
      },
      "ResultPath": "$.heap3",
      "Type": "Pass",
    },
    "string__return \`the result: result.str\`": Object {
      "Next": "1__return \`the result: result.str\`",
      "Parameters": Object {
        "string.$": "States.Format($.heap4,$.result.str)",
      },
      "ResultPath": "$.heap4",
      "Type": "Pass",
    },
    "takeLeft__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`": Object {
      "InputPath": "$.fnl_context.input.obj.str2",
      "Next": "template__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`",
      "ResultPath": "$.heap0",
      "Type": "Pass",
    },
    "takeRight__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`": Object {
      "Next": "template__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`",
      "Result": "default",
      "ResultPath": "$.heap0",
      "Type": "Pass",
    },
    "task__result = await func(\`input.obj.str hello partOfTheTemplateString inpu": Object {
      "InputPath": "$.heap3.string",
      "Next": "assign__result = await func(\`input.obj.str hello partOfTheTemplateString in",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.heap2",
      "Type": "Task",
    },
    "template__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`": Object {
      "Next": "string__partOfTheTemplateString = \`hello input.obj.str2 ?? \\"default\\"\`",
      "Result": "hello {}",
      "ResultPath": "$.heap1",
      "Type": "Pass",
    },
  },
}
`;

exports[`templates simple 1`] = `
Object {
  "StartAt": "Initialize Functionless Context",
  "States": Object {
    "1__return \`x\`": Object {
      "End": true,
      "InputPath": "$.heap0.string",
      "ResultPath": "$",
      "Type": "Pass",
    },
    "Initialize Functionless Context": Object {
      "Next": "x = input.str",
      "OutputPath": "$",
      "Parameters": Object {
        "input.$": "$",
        "null": null,
      },
      "ResultPath": "$.fnl_context",
      "Type": "Pass",
    },
    "return \`x\`": Object {
      "Next": "string__return \`x\`",
      "Result": "{}",
      "ResultPath": "$.heap0",
      "Type": "Pass",
    },
    "string__return \`x\`": Object {
      "Next": "1__return \`x\`",
      "Parameters": Object {
        "string.$": "States.Format($.heap0,$.x)",
      },
      "ResultPath": "$.heap0",
      "Type": "Pass",
    },
    "x = input.str": Object {
      "InputPath": "$.fnl_context.input.str",
      "Next": "return \`x\`",
      "ResultPath": "$.x",
      "Type": "Pass",
    },
  },
}
`;
